[gd_scene load_steps=16 format=3 uid="uid://ds6rqlj7kkbbm"]

[ext_resource type="Texture2D" uid="uid://dxp26fqql4dc3" path="res://animations/survivor_gun_anim/survivor2_anim1.png" id="1_aa6p6"]
[ext_resource type="Script" path="res://Scripts/survivor_gun.gd" id="1_cylxf"]
[ext_resource type="PackedScene" uid="uid://dvtw1i0vkuc6x" path="res://scenes/bullet.tscn" id="2_gf5xa"]
[ext_resource type="Texture2D" uid="uid://c4u04qgokm5yf" path="res://animations/survivor_gun_anim/survivor2_anim2.png" id="2_sjecj"]
[ext_resource type="Texture2D" uid="uid://dcq21vts8bnuy" path="res://animations/survivor_gun_anim/survivor2_anim3.png" id="3_501rr"]
[ext_resource type="PackedScene" uid="uid://d02m7y78a4dvc" path="res://scenes/bullet_left.tscn" id="3_njmxk"]
[ext_resource type="Texture2D" uid="uid://k1biiu80vmev" path="res://animations/survivor_gun_anim/survivor2_anim4.png" id="4_42ack"]
[ext_resource type="AudioStream" uid="uid://dx20o8pn1f044" path="res://audio/survivor/gunshot.wav" id="8_x7cab"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ovgc7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_aa6p6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sjecj")
}, {
"duration": 1.0,
"texture": ExtResource("3_501rr")
}, {
"duration": 1.0,
"texture": ExtResource("4_42ack")
}, {
"duration": 1.0,
"texture": ExtResource("1_aa6p6")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5avge"]
radius = 53.0
height = 348.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36ao6"]

[sub_resource type="Curve" id="Curve_2gofq"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="SystemFont" id="SystemFont_ks8wu"]
font_names = PackedStringArray("8-bit Limit (BRK)")
subpixel_positioning = 0
oversampling = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_xlg3k"]
line_spacing = 1.0
font = SubResource("SystemFont_ks8wu")
font_size = 46
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 26
shadow_color = Color(0, 0, 0, 0.207843)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5jnp"]
bg_color = Color(0.835294, 0.054902, 0.0509804, 1)

[node name="survivor_gun" type="CharacterBody2D"]
z_index = 3
script = ExtResource("1_cylxf")
Bullet = ExtResource("2_gf5xa")
Bullet_left = ExtResource("3_njmxk")

[node name="survivor_gun" type="AnimatedSprite2D" parent="."]
position = Vector2(42.935, 0)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_ovgc7")
animation = &"shoot"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5avge")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(150, -6)
gizmo_extents = 90.0

[node name="RayCast2D" type="RayCast2D" parent="."]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
z_index = 55
position = Vector2(150, 0)
target_position = Vector2(2000, 0)
hit_from_inside = true

[node name="Area2D" type="Area2D" parent="."]
z_index = 2
scale = Vector2(0.935, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(6.675, 16.58)
shape = SubResource("RectangleShape2D_36ao6")
debug_color = Color(0.7, 0, 0, 0.42)

[node name="gunshot" type="AudioStreamPlayer2D" parent="."]
position = Vector2(150.44, -7.015)
stream = ExtResource("8_x7cab")
volume_db = -10.182
max_distance = 3500.0

[node name="blood_splatter" type="CPUParticles2D" parent="."]
position = Vector2(8, -23)
emitting = false
amount = 100
lifetime = 0.3
speed_scale = 0.8
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(0, 0)
spread = 180.0
initial_velocity_min = 29.2
initial_velocity_max = 138.69
scale_amount_min = 2.0
scale_amount_max = 8.3
color = Color(0.818359, 0, 0, 1)
hue_variation_curve = SubResource("Curve_2gofq")

[node name="Label" type="Label" parent="."]
offset_left = -262.0
offset_top = -232.0
offset_right = 48.0
offset_bottom = -156.0
scale = Vector2(1.65033, 1.65033)
text = "EAT SHIT!!!"
label_settings = SubResource("LabelSettings_xlg3k")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -68.0
offset_top = -183.0
offset_right = 72.0
offset_bottom = -166.0
theme_override_styles/fill = SubResource("StyleBoxFlat_c5jnp")
max_value = 30.0
step = 1.0
show_percentage = false

[connection signal="animation_changed" from="survivor_gun" to="." method="_on_survivor_gun_animation_changed"]
[connection signal="animation_looped" from="survivor_gun" to="." method="_on_survivor_gun_animation_looped"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
